# Gameboy-Emulator

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake.yml
include/GB/: CPU.hpp  GUI.hpp  MMU.hpp  Opcodes_Arthimetic_base.hpp  Opcodes_Load_base.hpp  Opcodes_base.hpp  PPU.hpp  Registers.hpp  ScreenDisplay.hpp
src/: CMakeLists.txt  CPU.cpp  MMU.cpp  Registers.cpp  main.cpp
src/CPU/: CMakeLists.txt  CPU.cpp  CPU_16bit_arthimetic_instrs.cpp  CPU_16bit_load_instrs.cpp  CPU_8bit_arthimetic_instrs.cpp  CPU_8bit_load_instrs.cpp  CPU_control_instrs.cpp  CPU_jump_instrs.cpp  CPU_opcode_0xcb_switch_statements.cpp  CPU_opcode_switch_statements.cpp  CPU_rotate_and_shift_instrs.cpp  CPU_single_bit_instrs.cpp
src/MMU/: CMakeLists.txt  MMU.cpp  MMU_MBC0.cpp  MMU_MBC1.cpp  MMU_MBC3.cpp  MMU_banks.cpp  MMU_cpu_interrupts_and_timers.cpp  MMU_joypad.cpp  MMU_ppu_registers.cpp
src/PPU/: CMakeLists.txt  PPU.cpp  PPU_BG_and_window.cpp  PPU_background.cpp  PPU_pixel_fifo.cpp  PPU_sprites.cpp  PPU_window.cpp
src/Registers/: CMakeLists.txt  Registers.cpp
src/SDL/: CMakeLists.txt  GUI.cpp  ScreenDisplay.cpp
tests/: CMakeLists.txt  test_base.hpp  test_cpu.cpp  test_mmu.cpp  test_opcodes_load.cpp  test_registers.cpp
